--- a/ProjectDiamondShop/Content/Diamonds/ViewDiamond.css
+++ b/ProjectDiamondShop/Content/Diamonds/ViewDiamond.css
@@ -88,7 +88,6 @@
 		border: 1px solid #555;
 	}
 
-
 .quality-commitment,
 .purchase-instructions {
 	margin-top: 20px;
@@ -112,10 +111,7 @@
 		background-color: #f4d35e;
 	}
 
-.modal-content {
-	color: #333;
-	background-color: #fff;
-}
+
 
 .close {
 	margin-left: 150px;
@@ -126,7 +122,6 @@
 h3 {
 	justify-content: center;
 	display: flex;
-	/*color: bisque;*/
 	color: goldenrod;
 	font-family: fantasy;
 }
@@ -166,15 +161,78 @@ button.thumbnail-button-cert {
 	object-fit: contain;
 }
 
-
-.carousel-control-next-icon {
-	color: #ffff99;
-}
-
+.carousel-control-next-icon,
 .carousel-control-prev-icon {
 	color: #ffff99;
 }
+
 .video-frame {
-	border-radius: 15px; /* Thay đổi giá trị 15px nếu bạn muốn bo góc nhiều hơn hoặc ít hơn */
-	overflow: hidden; /* Đảm bảo nội dung bên trong cũng được bo góc */
+	width: 100%;
+	height: 300px;
+	margin-top: 50px;
+}
+
+.additional-info {
+	margin-top: 40px;
+}
+
+.quality-commitment,
+.purchase-instructions {
+	margin-top: 20px;
+}
+
+.table-custom {
+	width: 100%;
+}
+
+.modal-body img {
+	max-width: 100%;
+}
+
+.info-box {
+	display: none;
+	position: absolute;
+	background: #f9f9f9;
+	border: 1px solid #ddd;
+	padding: 10px;
+	width: 200px;
+	z-index: 1000;
+}
+
+.select2-container {
+	width: 40% !important; /* Adjust this percentage or set a fixed width */
+	padding: 0;
+	color: #444;
+	background-color: #3C9ED5;
+	line-height: 28px;
+	border-radius: 10px;
+}
+
+.select2-dropdown {
+	width: auto !important; /* Adjust dropdown width */
+}
+
+.modal-content {
+	color: #333;
+	padding: 5px;
+}
+
+.settingInfoContainer {
+	border-radius: 10px;
+	background-color: #fff;
+	display: none;
+	padding: 10px;
+	margin-top: 10px;
+}
+
+.accentStoneInfoContainer {
+	border-radius: 10px;
+	background-color: #fff;
+	display: none;
+	padding: 10px;
+	margin-top: 10px;
+}
+
+.img-thumbnail {
+	width: 100%;
 }
