--- a/ProjectDiamondShop/Content/Order/UpdateOrderDetails.css
+++ b/ProjectDiamondShop/Content/Order/UpdateOrderDetails.css
@@ -2,6 +2,7 @@
 	display: flex;
 	justify-content: center;
 	color: #ffff99;
+	font-size: 2em;
 	margin-bottom: 50px;
 }
 
@@ -9,7 +10,6 @@ body {
 	margin-top: 100px;
 	color: #fff;
 	background-color: #333;
-	font-size: small;
 }
 
 .container {
@@ -37,9 +37,9 @@ body {
 	align-items: center;
 	margin-bottom: 30px;
 	position: relative;
+	font-size: 1.2em;
 	width: 100%;
 	overflow-x: auto; /* Add horizontal scroll */
-	font-size: 1.5em;
 }
 
 	.status-progress .status-item {
@@ -49,6 +49,7 @@ body {
 	}
 
 	.status-progress .icon {
+		font-size: 2em;
 		color: lightgray;
 	}
 
@@ -60,8 +61,23 @@ body {
 		color: #ffd700;
 	}
 
+	/*.status-progress .bar {*/
+	/*width: 0%;
+		height: 5px;*/
+	/*background-color: lightgray;
+		position: absolute;
+		top: 50%;
+		z-index: 1;
+		margin-top: 30px;*/
+	/*}*/
+
+	.status-progress .completed .bar {
+		background-color: #ffd700;
+	}
+
 .status-text {
 	margin-top: 10px;
+	font-size: 1.1em;
 }
 
 .form-group {
@@ -79,7 +95,6 @@ body {
 		background-color: #f7f7f7;
 		border: 1px solid #ddd;
 		border-radius: 4px;
-		color: #333;
 	}
 
 .back-button {
@@ -89,13 +104,13 @@ body {
 
 	.back-button button {
 		padding: 15px 30px;
+		font-size: 1.2em;
 		font-weight: bold;
 		color: white;
 		background-color: green;
 		border: none;
 		border-radius: 20px;
 		cursor: pointer;
-		transition: background-color 0.3s ease;
 	}
 
 		.back-button button:hover {
@@ -110,9 +125,9 @@ body {
 	border: 1px solid #ddd;
 	border-radius: 5px;
 	margin-bottom: 10px;
+	font-size: 1.2em;
 	width: 100%;
 	flex-wrap: wrap;
-	background-color: #555;
 }
 
 	.cart-item img {
@@ -121,7 +136,6 @@ body {
 		flex-basis: 100%;
 		max-height: 250px;
 		object-fit: cover;
-		border-radius: 10px;
 	}
 
 .cart-item-details {
@@ -141,6 +155,7 @@ body {
 	text-align: right;
 	font-weight: bold;
 	margin-top: 30px;
+	font-size: 1.2em;
 	width: 100%;
 }
 
@@ -148,6 +163,7 @@ body {
 	list-style-type: none;
 	position: relative;
 	padding-left: 50px;
+	font-size: 1.2em;
 	width: 100%;
 }
 
@@ -187,20 +203,18 @@ body {
 	align-items: center;
 	background-color: #BABABA;
 	width: 100%;
-	border-radius: 15px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	overflow: hidden;
 }
 
 	.horizontal-card img {
-		width: 100%;
+		width: 40%;
 		height: auto;
+		border-radius: 15px 15px 0 0;
 	}
 
 	.horizontal-card .card-body {
 		width: 100%;
 		padding: 20px;
-		background-color: #fff;
+		background-color: #ffff;
 		height: 100%;
 	}
 
@@ -211,9 +225,11 @@ body {
 
 		.horizontal-card img {
 			width: 40%;
+			border-radius: 15px 0 0 15px;
 		}
 
 		.horizontal-card .card-body {
-			width: 60%;
+			width: 50%;
+			height: 100%;
 		}
 }
