--- a/ProjectDiamondShop/Views/Introduce/Emerald.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Emerald.cshtml
@@ -21,8 +21,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Home")">Home</a>
                     </li>
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Contact", "Home")">Contact Us</a>
+                        <a class="nav-link" href="https://www.facebook.com/profile.php?id=61561345894731" target="_blank">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Diamonds")">Shop</a>
@@ -43,7 +43,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCart">
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "Cart")">View Cart</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
+
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -52,20 +52,16 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                                 <li><a class="dropdown-item" href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("Logout", "Account")">Logout</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("WarrantyDetails", "Warranty")">Warranty</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("Logout", "Login")">Logout</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item notification-bell">
-                            <a class="nav-link" href="#" id="notificationBell" role="button">
-                                <i class="fas fa-bell"></i>
-                                <span class="notification-count" id="notificationCount">0</span>
-                            </a>
                         </li>
                     }
                     else
                     {
                         <li class="nav-item">
-                            <a class="nav-link login-btn" href="@Url.Action("Index", "Account")">Login</a>
+                            <a class="nav-link login-btn" href="@Url.Action("Index", "Login")">Login</a>
                         </li>
                     }
                 </ul>
@@ -128,7 +124,7 @@
             </a>
         </div>
 
-        <h2 class="text-center" style="margin-top: 48px;">Emerald Diamond Story</h2>
+        <h1 class="text-center" style="margin-top: 48px;">Emerald Diamond Story</h1>
 
         <div class="container center">
             <div class="row">
@@ -189,7 +185,7 @@
                     The GIA <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity scale</a> ranges from best (void of inclusions) to worst (easily noticeable inclusions).
                     Their designations include:
                 </p>
-                <ul class="custom-list">
+                <ul class="custom-list" style="margin-left:50px">
                     <li> <b>IF </b>– Internally Flawless</li>
                     <li> <b>VVS1 </b>– Very Very Small Inclusions 1</li>
                     <li> <b>VVS2 </b>– Very Very Small Inclusions 2</li>
@@ -242,26 +238,6 @@
         </div>
     </div>
 
-    <!-- Notification Modal -->
-    <div class="modal fade" id="notificationsModal" tabindex="-1" aria-labelledby="notificationsModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="notificationsModalLabel">Notifications</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div id="notificationList">
-                        <!-- Notifications will be appended here -->
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -273,98 +249,9 @@
                 $('#userName').text(userName);
                 $('#loginSuccessModal').modal('show');
                 $('#modalOkButton').click(function () {
-                    window.location.href = '@Url.Action("Index", "Home")';
+                    window.location.href = '#';
                 });
             }
-
-            // Fetch notification count
-            function fetchNotificationCount() {
-                $.ajax({
-                    url: '@Url.Action("GetUnreadNotificationCount", "Notification")',
-                    type: 'GET',
-                    success: function (response) {
-                        if (response.success) {
-                            var notificationCount = response.unreadCount;
-                            if (notificationCount > 0) {
-                                $('#notificationCount').text(notificationCount);
-                            } else {
-                                $('#notificationCount').text('');
-                            }
-                        } else {
-                            console.log(response.message);
-                        }
-                    },
-                    error: function () {
-                        console.log('Error retrieving notification count.');
-                    }
-                });
-            }
-
-            // Fetch notifications
-            function fetchNotifications() {
-                $.ajax({
-                    url: '@Url.Action("GetNotifications", "Notification")',
-                    type: 'GET',
-                    success: function (response) {
-                        if (response.success) {
-                            var notificationList = $('#notificationList');
-                            notificationList.empty();
-                            response.notifications.forEach(function (notification) {
-                                var item = '<div class="notification-item ' +
-                                    (notification.important ? 'important' : '') + '">' +
-                                    '<i class="fas fa-exclamation-circle icon"></i>' +
-                                    '<div class="notification-content">' +
-                                    '<strong>' + notification.detail + '</strong>' +
-                                    '<small>' + notification.date + '</small>' +
-                                    '</div>' +
-                                    '</div>';
-                                notificationList.prepend(item);
-                            });
-                            $('#notificationsModal').modal('show');
-                            markAllNotificationsAsRead();
-                        } else {
-                            alert(response.message);
-                        }
-                    },
-                    error: function () {
-                        alert('Error retrieving notifications.');
-                    }
-                });
-            }
-
-            // Mark all notifications as read
-            function markAllNotificationsAsRead() {
-                $.ajax({
-                    url: '@Url.Action("MarkAllAsRead", "Notification")',
-                    type: 'POST',
-                    success: function (response) {
-                        if (response.success) {
-                            $('#notificationCount').text('');
-                        } else {
-                            console.log(response.message);
-                        }
-                    },
-                    error: function () {
-                        console.log('Error marking notifications as read.');
-                    }
-                });
-            }
-
-            // Initial fetch
-            fetchNotificationCount();
-
-            // Handle bell icon click
-            $('#notificationBell').click(function () {
-                fetchNotifications();
-            });
-
-            // Poll for new notifications every 60 seconds
-            setInterval(fetchNotificationCount, 60000);
-
-            // Handle modal close actions
-            $('#notificationsModal').on('hidden.bs.modal', function () {
-                markAllNotificationsAsRead();
-            });
 
             // Hide and show navbar on scroll
             var lastScrollTop = 0;
